[package]
name = "becoin-wasm"
version = "0.1.0"
authors = ["rkinkk r3kinek0@gmail.com"]
repository = "https://github.com/rkinkk/becoin-wasm"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
wasm-bindgen = "0.2"